Add palette settings menu and palette wheel widget

--- a/settings.html
+++ b/settings.html
@@ -66,6 +66,7 @@
     <div id="settings-tabs">
       <button class="tab-btn active" data-tab="sampler-settings">Sampler Settings</button>
       <button class="tab-btn" data-tab="api-keys">API Keys</button>
+      <button class="tab-btn" data-tab="palettes">Palettes</button>
     </div>
     <div id="settings-pane">
     <form id="sampler-settings">
