--- a/index.html
+++ b/index.html
@@ -105,10 +105,7 @@
       }
 
       .reroll {
-        font-size: 1.3em;
         cursor: pointer;
-        height: 25px;
-        padding-left: 0.75rem;
       }
 
       #rewrite-button {
@@ -495,6 +492,163 @@
       #search-suggestions {
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       }
+
+      .palette-wheel-widget {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            border-radius: 12px;
+            width: 200px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .palette-wheel-widget .palette-selector {
+            width: 100%;
+        }
+
+        .palette-wheel-widget .palette-dropdown {
+            width: 100%;
+            border: 1px solid #374151;
+            border-radius: 6px;
+            font-size: 12px;
+            cursor: pointer;
+            transition: border-color 0.2s;
+            font-family: inherit;
+        }
+
+        .palette-wheel-widget .palette-dropdown:hover {
+            border-color: #ef4444;
+        }
+
+        .palette-wheel-widget .palette-dropdown:focus {
+            outline: none;
+            border-color: #ef4444;
+            box-shadow: 0 0 0 2px rgba(239, 68, 68, 0.1);
+        }
+
+        .palette-wheel-widget .wheel-wrapper {
+            position: relative;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 0;
+        }
+
+        .palette-wheel-widget .wheel-container {
+            position: relative;
+            width: 100px;
+            height: 100px;
+        }
+
+        .palette-wheel-widget .palette-wheel {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        .palette-wheel-widget .wheel-svg {
+            width: 100%;
+            height: 100%;
+            filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.3));
+        }
+
+        .palette-wheel-widget .wheel-segment {
+            cursor: pointer;
+            transition: opacity 0.2s;
+            stroke: #6b7280;
+            stroke-width: 1;
+        }
+
+        .palette-wheel-widget .wheel-segment:hover {
+            opacity: 0.8;
+        }
+
+        .palette-wheel-widget .wheel-segment.active {
+            opacity: 0.6;
+            stroke: #fbbf24;
+            stroke-width: 2;
+        }
+
+        .palette-wheel-widget .segment-text {
+            pointer-events: none;
+            fill: white;
+            font-size: 9px;
+            font-weight: 600;
+            text-anchor: middle;
+            dominant-baseline: middle;
+        }
+
+        /* Hidden dropdown for actual selection */
+        .palette-wheel-widget .hidden-sampler-select {
+            display: none;
+        }
+
+        .palette-wheel-widget .current-selection {
+            width: 100%;
+            border-radius: 6px;
+            text-align: center;
+            font-size: 1.1em;
+            line-height: 14px;
+            font-weight: 600;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            min-height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .palette-wheel-widget .wheel-center {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 36px;
+            height: 36px;
+            background: #111827;
+            border: 2px solid #fbbf24;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            pointer-events: none;
+            box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        .palette-wheel-widget .wheel-center.active::after {
+            content: "🎲";
+            font-size: 16px;
+        }
+
+        /* Roulette ball indicator at top */
+        .palette-wheel-widget .wheel-container.active::before {
+            content: "";
+            position: absolute;
+            top: -4px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 10px;
+            height: 10px;
+            background: radial-gradient(circle at 30% 30%, #fef3c7, #fbbf24);
+            border-radius: 50%;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+            z-index: 30;
+        }
+
+        .palette-wheel-widget .empty-wheel {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #6b7280;
+            font-size: 11px;
+            font-style: italic;
+            text-align: center;
+            width: 80px;
+        }	
     </style>
   </head>
   <body>
