Settings style improvements & make them friendly for new users

--- a/src/index.html
+++ b/src/index.html
@@ -95,15 +95,16 @@
         padding: 6px 16px;
         min-height: 36px;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         background-color: white;
       }
 
       .top-bar-content {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
         width: 100%;
+        padding-bottom: 4px;
       }
 
       .logo-title {
@@ -168,9 +169,8 @@
         flex: 1;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        padding: 12px;
         min-height: 0;
+        overflow: hidden;
       }
 
       .response {
@@ -201,7 +201,6 @@
         gap: 4px;
         transition: background-color 0.2s;
         height: 36px;
-        margin-right: 8px;
         box-sizing: border-box;
         white-space: nowrap;
       }
@@ -288,11 +287,8 @@
       .generate-button-container {
         display: inline-flex;
         align-items: center;
-        margin-left: auto;
         flex-shrink: 0;
-        position: absolute;
-        right: 16px;
-        bottom: 6px;
+        position: relative;
       }
 
       #gen-controls {
@@ -317,6 +313,7 @@
         display: flex;
         flex-direction: row;
         align-items: flex-start;
+        justify-content: space-between;
         flex-shrink: 0;
         gap: 12px;
         position: relative;
@@ -328,6 +325,27 @@
         gap: 4px;
         flex: 1;
         min-width: 0;
+        align-items: flex-start;
+      }
+
+      #controls-right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 8px;
+        flex-shrink: 0;
+        margin-right: 0;
+      }
+
+      #focused-node-title {
+        font-size: 14px;
+        font-weight: 600;
+        color: #333;
+        max-width: 300px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        margin-bottom: 2px;
       }
 
       #node-summary-display {
@@ -357,10 +375,11 @@
         flex-direction: row;
         align-items: center;
         gap: 8px;
+        width: 100%;
       }
 
       #buttons #session-buttons {
-        margin-left: auto;
+        margin-left: 0;
       }
 
       #editor {
@@ -368,15 +387,17 @@
         outline: none;
         flex: 1;
         width: 100%;
+        height: 100%;
         overflow-y: auto;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-        padding: 12px;
+        padding: 16px;
         box-sizing: border-box;
         resize: none;
         font-family: inherit;
         font-size: 14px;
         line-height: 1.5;
         min-height: 0;
+        max-height: none;
       }
 
       .user-prompt {
@@ -384,9 +405,9 @@
       }
 
       #die {
-        height: 32px;
-        width: 40px;
-        font-size: 24px;
+        height: 24px;
+        width: 24px;
+        font-size: 18px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -394,10 +415,9 @@
         opacity: 0;
         visibility: hidden;
         transition: opacity 0.2s ease;
-        position: absolute;
-        right: 140px;
-        bottom: 6px;
+        position: relative;
         z-index: 10;
+        margin-right: 8px;
       }
 
       #die.rolling {
@@ -774,8 +794,7 @@
         display: flex;
         gap: 12px;
         align-items: center;
-        margin-left: auto;
-        margin-right: 0;
+        flex-shrink: 0;
       }
 
       .control-group {
@@ -801,7 +820,8 @@
         font-size: 13px;
         color: #333;
         cursor: pointer;
-        min-width: 110px;
+        min-width: 100px;
+        max-width: 150px;
         transition: border-color 0.2s;
       }
 
@@ -813,6 +833,36 @@
 
       .control-group select:hover {
         border-color: #adb5bd;
+      }
+
+      /* Emoji label clickable styles */
+      .control-group label[title] {
+        transition: all 0.2s ease;
+        position: relative;
+      }
+
+      .control-group label[title]:hover {
+        transform: scale(1.1);
+        filter: brightness(1.2);
+        text-shadow: 0 0 8px rgba(0, 123, 255, 0.3);
+      }
+
+      .control-group label[title]:active {
+        transform: scale(0.95);
+      }
+
+      .control-group label[title]::after {
+        content: "⚙️";
+        position: absolute;
+        top: -8px;
+        right: -8px;
+        font-size: 8px;
+        opacity: 0;
+        transition: opacity 0.2s ease;
+      }
+
+      .control-group label[title]:hover::after {
+        opacity: 1;
       }
     </style>
   </head>
@@ -830,6 +880,7 @@
               <span class="app-title">MiniHF MiniLoom</span>
             </div>
             <div class="file-info">
+              <div id="die">🎲</div>
               <span id="current-filename">Untitled</span>
               <span
                 id="unsaved-indicator"
@@ -848,6 +899,7 @@
 
         <div id="controls">
           <div id="controls-left">
+            <div id="focused-node-title"></div>
             <div id="node-summary-display"></div>
             <div id="controls-form">
               <div id="buttons">
@@ -863,33 +915,36 @@
             </div>
           </div>
 
-          <!-- New Services and Samplers Selectors -->
-          <div id="generation-controls">
-            <div class="control-group">
-              <label for="service-selector" title="Service">🌐</label>
-              <select id="service-selector">
-                <option value="">-- Select a service --</option>
-              </select>
+          <div id="controls-right">
+            <div id="generation-controls">
+              <div class="control-group">
+                <label for="service-selector" title="Service">🌐</label>
+                <select id="service-selector">
+                  <option value="">-- Select Service --</option>
+                </select>
+              </div>
+              <div class="control-group">
+                <label for="api-key-selector" title="API Key">🔑</label>
+                <select id="api-key-selector">
+                  <option value="">-- Select API key --</option>
+                </select>
+              </div>
+              <div class="control-group">
+                <label for="sampler-selector" title="Sampler">🎲</label>
+                <select id="sampler-selector">
+                  <option value="">-- Select a sampler --</option>
+                </select>
+              </div>
             </div>
-            <div class="control-group">
-              <label for="sampler-selector" title="Sampler">🎲</label>
-              <select id="sampler-selector">
-                <option value="">-- Select a sampler --</option>
-              </select>
-            </div>
-            <div class="control-group">
-              <label for="api-key-selector" title="API Key">🔑</label>
-              <select id="api-key-selector">
-                <option value="">-- Select API key --</option>
-              </select>
-            </div>
-          </div>
 
-          <div id="die">🎲</div>
-          <div id="generate-button-container" class="generate-button-container">
-            <span id="generate-button" class="reroll"
-              >🖋️ <span>Generate</span></span
+            <div
+              id="generate-button-container"
+              class="generate-button-container"
             >
+              <span id="generate-button" class="reroll"
+                >🖋️ <span>Generate</span></span
+              >
+            </div>
           </div>
         </div>
         <div id="errors">
