--- a/src/settings.html
+++ b/src/settings.html
@@ -44,34 +44,36 @@
         border-bottom: 1px solid #e9ecef;
         padding: 0 16px;
         margin: 0;
-        height: 40px;
+        height: 48px;
         align-items: center;
       }
 
       .tab-btn {
-        padding: 6px 12px;
+        padding: 12px 20px;
         background: none;
         border: none;
         cursor: pointer;
-        font-size: 12px;
+        font-size: 14px;
         font-weight: 500;
         color: #6c757d;
-        border-bottom: 2px solid transparent;
-        transition: all 0.2s;
-        border-radius: 4px 4px 0 0;
-        margin-right: 4px;
+        border-bottom: 3px solid transparent;
+        transition: none;
+        border-radius: 0;
+        margin-right: 0;
+        position: relative;
       }
 
       .tab-btn:hover {
-        background-color: rgba(0, 0, 0, 0.04);
+        background-color: rgba(0, 0, 0, 0.02);
         color: #495057;
       }
 
       .tab-btn.active {
         color: #333;
-        border-bottom-color: #dc3545;
+        border-bottom-color: #007bff;
         background-color: white;
         font-weight: 600;
+        box-shadow: 0 1px 0 0 white;
       }
 
       /* Small table-ish layout helpers */
@@ -90,7 +92,7 @@
       .divider {
         height: 1px;
         background-color: #e9ecef;
-        margin: 12px 0;
+        margin: 4px 0 12px 0;
       }
       .btn {
         padding: 6px 12px;
@@ -142,20 +144,22 @@
       .close-btn {
         position: absolute;
         top: 12px;
-        right: 16px;
-        background: none;
+        right: 12px;
+        background: white;
         border: none;
-        font-size: 20px;
+        font-size: 24px;
         cursor: pointer;
         color: #666;
-        z-index: 1000;
         width: 28px;
         height: 28px;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 4px;
+        border-radius: 50%;
         transition: all 0.2s;
+        font-weight: 300;
+        z-index: 10;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
       }
 
       .close-btn:hover {
@@ -169,27 +173,27 @@
 
       /* Form field styles */
       .form-field {
-        margin-bottom: 12px;
+        margin-bottom: 20px;
       }
 
       .form-field label {
         display: block;
-        margin-bottom: 4px;
+        margin-bottom: 8px;
         font-weight: 500;
-        color: #333;
-        font-size: 13px;
-        min-width: 120px;
+        color: var(--night);
+        font-size: 14px;
+        min-width: 100px;
       }
 
       .form-field input {
-        width: 100%;
-        padding: 6px 10px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
+        width: 350px !important;
+        padding: 12px;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 6px;
         font-size: 14px;
         color: #333;
-        transition: border-color 0.2s;
-        min-width: 300px;
+        transition: all 0.2s ease;
+        box-sizing: border-box;
       }
 
       .form-field input:focus {
@@ -208,8 +212,8 @@
 
       .form-row {
         display: flex;
-        gap: 16px;
-        margin-bottom: 12px;
+        gap: 20px;
+        margin-bottom: 20px;
       }
 
       .form-row .form-field {
@@ -218,19 +222,23 @@
       }
 
       .form-row label {
-        min-width: 120px;
-        font-size: 12px;
+        display: block;
+        margin-bottom: 8px;
         font-weight: 500;
-        color: #666;
+        font-size: 14px;
+        color: var(--night);
       }
 
       .form-row input,
       .form-row select {
-        flex: 1;
-        padding: 4px 8px;
+        width: 350px !important;
+        min-width: 350px !important;
+        padding: 12px;
         border: 1px solid rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
-        font-size: 12px;
+        border-radius: 6px;
+        font-size: 14px;
+        transition: all 0.2s ease;
+        box-sizing: border-box;
       }
 
       .form-row input:focus,
@@ -244,7 +252,7 @@
       .tab-content {
         display: none;
         flex: 1;
-        padding: 16px 32px;
+        padding: 16px 24px;
         overflow-y: auto;
       }
 
@@ -299,21 +307,50 @@
         font-weight: 500;
         color: var(--night);
         min-width: 100px;
+        margin-bottom: 0;
       }
 
       .tab-content .row input {
-        flex: 1;
-        padding: 8px;
+        padding: 12px;
         border: 1px solid rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
+        border-radius: 6px;
         font-size: 14px;
         transition: all 0.2s ease;
+        min-width: 350px;
       }
 
       .tab-content .row input:focus {
         outline: none;
         border-color: var(--engineering-orange);
         box-shadow: 0 0 0 2px rgba(213, 4, 2, 0.2);
+      }
+
+      /* Help icon styling */
+      .help-icon {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        background-color: #6c757d;
+        color: white;
+        border-radius: 50%;
+        text-align: center;
+        line-height: 16px;
+        font-size: 11px;
+        font-weight: bold;
+        cursor: help;
+        margin-left: 6px;
+        flex-shrink: 0;
+        transition: none;
+      }
+
+      .help-icon:hover {
+        background-color: #495057;
+      }
+
+      #key-name {
+        width: 160px !important;
+        min-width: 160px !important;
+        max-width: 160px !important;
       }
 
       .tab-content .row button {
@@ -369,7 +406,6 @@
       }
 
       select {
-        flex: 1;
         padding: 6px 10px;
         border: 1px solid #ddd;
         border-radius: 4px;
@@ -419,12 +455,38 @@
     </style>
   </head>
   <body>
-    <button class="close-btn" id="close-settings">×</button>
     <div id="settings-pane">
+      <!-- Welcome message for new users -->
+      <div
+        id="welcome-message"
+        style="
+          display: none;
+          background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+          color: white;
+          padding: 20px;
+          margin: 0;
+          text-align: center;
+        "
+      >
+        <h2 style="margin: 0 0 10px 0; font-size: 24px">
+          🎉 Welcome to MiniLoom!
+        </h2>
+        <p style="margin: 0 0 15px 0; font-size: 16px; opacity: 0.9">
+          To get started, please create a Service and add a valid API Key from
+          that LLM provider.
+        </p>
+        <p style="margin: 0; font-size: 14px; opacity: 0.8">
+          We've created a "Default" sampler, which you can change. Samplers
+          control how many branches are generated, how long each branch is, and
+          how creative they are.
+        </p>
+      </div>
+
       <div id="settings-tabs">
         <button class="tab-btn active" data-tab="services">🌐 Services</button>
-        <button class="tab-btn" data-tab="samplers">🎲 Samplers</button>
         <button class="tab-btn" data-tab="api-keys">🔑 API Keys</button>
+        <button class="tab-btn" data-tab="samplers">🎲 Samplers</button>
+        <button class="close-btn" id="close-settings">×</button>
       </div>
 
       <!-- Services Tab -->
@@ -444,53 +506,62 @@
         <form id="services-form" style="display: none">
           <div class="form-field">
             <label for="service-name">Service Name</label>
-            <input
-              type="text"
-              id="service-name"
-              class="modelNameType"
-              placeholder="e.g. My OpenAI"
-            />
+            <div style="display: flex; align-items: center">
+              <input
+                type="text"
+                id="service-name"
+                class="modelNameType"
+                placeholder="e.g. My OpenAI"
+              />
+              <span
+                class="help-icon"
+                title="Names allow A–Z, a–z, 0–9, dash, underscore, and dot. Maximum 20 characters."
+                >?</span
+              >
+            </div>
           </div>
 
-          <div class="form-field">
-            <label for="sampling-method">Sampling Method</label>
-            <select id="sampling-method">
-              <option value="openai">OpenAI Completions</option>
-              <option value="openai-chat">OpenAI Chat Completions</option>
-              <option value="openrouter">OpenRouter API</option>
-              <option value="together">Together API</option>
-              <option value="base">Custom</option>
-            </select>
+          <div class="form-row">
+            <div class="form-field">
+              <label for="sampling-method">Sampling Method</label>
+              <select id="sampling-method">
+                <option value="openai">OpenAI Completions</option>
+                <option value="openai-chat">OpenAI Chat Completions</option>
+                <option value="openrouter">OpenRouter API</option>
+                <option value="together">Together API</option>
+                <option value="base">Custom</option>
+              </select>
+            </div>
+            <div class="form-field">
+              <label for="service-api-delay">API Delay (milliseconds)</label>
+              <input
+                type="text"
+                id="service-api-delay"
+                class="intType"
+                placeholder="3000"
+              />
+            </div>
           </div>
 
-          <div class="form-field">
-            <label for="service-api-url">API URL</label>
-            <input
-              type="text"
-              id="service-api-url"
-              class="URLType"
-              placeholder="https://api.openai.com/"
-            />
-          </div>
-
-          <div class="form-field">
-            <label for="service-model-name">Model Name</label>
-            <input
-              type="text"
-              id="service-model-name"
-              class="modelNameType"
-              placeholder="gpt-4"
-            />
-          </div>
-
-          <div class="form-field">
-            <label for="service-api-delay">API Delay (milliseconds)</label>
-            <input
-              type="text"
-              id="service-api-delay"
-              class="intType"
-              placeholder="3000"
-            />
+          <div class="form-row">
+            <div class="form-field">
+              <label for="service-api-url">API URL</label>
+              <input
+                type="text"
+                id="service-api-url"
+                class="URLType"
+                placeholder="https://api.openai.com/"
+              />
+            </div>
+            <div class="form-field">
+              <label for="service-model-name">Model Name</label>
+              <input
+                type="text"
+                id="service-model-name"
+                class="modelNameType"
+                placeholder="gpt-4"
+              />
+            </div>
           </div>
 
           <div class="form-actions">
@@ -529,12 +600,19 @@
         <form id="samplers-form" style="display: none">
           <div class="form-field">
             <label for="sampler-name">Sampler Name</label>
-            <input
-              type="text"
-              id="sampler-name"
-              class="modelNameType"
-              placeholder="e.g. Creative Writing"
-            />
+            <div style="display: flex; align-items: center">
+              <input
+                type="text"
+                id="sampler-name"
+                class="modelNameType"
+                placeholder="e.g. Creative Writing"
+              />
+              <span
+                class="help-icon"
+                title="Names allow A–Z, a–z, 0–9, dash, underscore, and dot. Maximum 20 characters."
+                >?</span
+              >
+            </div>
           </div>
 
           <div class="form-row">
@@ -612,25 +690,32 @@
       <!-- API Keys Tab -->
       <div id="api-keys-tab" class="tab-content">
         <!-- Add Key Form -->
-        <div class="row">
-          <label for="key-label">Key Name</label>
+        <div class="row" style="gap: 4px; align-items: center">
+          <label for="key-label" style="min-width: auto; margin: 0"
+            >Key Name</label
+          >
           <input
             type="text"
-            id="key-label"
+            id="key-name"
             class="modelNameType"
             placeholder="e.g. OPENAI"
+            style="margin: 0"
           />
-          <label for="key-value" style="margin-left: 12px">Secret</label>
+          <span
+            class="help-icon"
+            title="Names allow A–Z, a–z, 0–9, dash, underscore, and dot. Maximum 20 characters."
+            >?</span
+          >
+          <label for="key-value" style="min-width: auto; margin: 0"
+            >Secret</label
+          >
           <input
             type="password"
             id="key-value"
             placeholder="paste your API key"
+            style="margin: 0"
           />
           <button class="btn primary" id="add-key-btn">Add</button>
-        </div>
-
-        <div class="muted" style="margin-top: 6px">
-          Names allow A–Z, a–z, 0–9, dash, underscore, and dot.
         </div>
 
         <div class="divider"></div>
