--- a/src/settings.html
+++ b/src/settings.html
@@ -118,6 +118,44 @@
         background-color: #0056b3;
         border-color: #0056b3;
       }
+
+      /* Footer styles for success/error messages */
+      #footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding: 8px 16px;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+        z-index: 1000;
+        transition: all 0.3s ease;
+        opacity: 0;
+        transform: translateY(100%);
+        pointer-events: none;
+      }
+
+      #footer.success {
+        background-color: #d4edda;
+        color: #155724;
+        border-top: 1px solid #c3e6cb;
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      #footer.error {
+        background-color: #f8d7da;
+        color: #721c24;
+        border-top: 1px solid #f5c6cb;
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      #footer:not(:empty) {
+        opacity: 1;
+        transform: translateY(0);
+      }
       .muted {
         opacity: 0.7;
         font-size: 0.9em;
